WEB-2303 Fixed layout issue with selected form section

--- a/fid-web/src/main/webapp/style/eventFormEdit.css
+++ b/fid-web/src/main/webapp/style/eventFormEdit.css
@@ -53,7 +53,7 @@ div.addCriteriaTitle {
 }
 
 div.criteriaSections div.itemLinkTitle {
-    width: 60%;
+    width: 63%;
     display: block;
     float: left;
     padding-left: 5px;
